---------------------------------------------------------------------------------------------------
Version: 2.0.4
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 2021-02-02
  Bugfixes:
    - Fixed character build distance bonus being increased when exiting edit mode
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 2020-12-24
  Changes:
    - Decreased minimum subgrid size to 2
  Bugfixes:
    - Fixed a crash when another mod removes the vanilla "introduction" tip
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2020-11-29
  Bugfixes:
    - Fixed a crash when other mods or scenarios override the increased build distance required to make drawing tapes work
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2020-11-26
  Features:
    - Added tips and tricks for the mod
    - Tapes may now be drawn, edited, and deleted from the map view
  Changes:
    - Completely rewrote the mod from scratch
    - Consolidated draw, edit, and delete functionality into one item
    - Changed how tape settings are edited:
      - Drawing normally will always auto-clear and be restricted to cardinal directions
      - Holding shift while drawing will enable freeform drawing and disable auto-clear
      - Shift + scrolling will change the subgrid size or number of splits
      - Ctrl + scrolling will cycle between subgrid and split modes
      - Right-clicking a tape will enter edit mode, where dragging will move the tape and scrolling works as above
      - Shift + right-clicking a tape will delete it
    - Changed color setting format to Hex
    - Removed all GUIs
---------------------------------------------------------------------------------------------------
Version: 1.1.7