@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.4
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed a crash when upgrading to 2.0.3 when in a non-character controller
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.3
 Date: 2021-02-02
